@@ -1,5 +1,6 @@
     ADDED: option: Panel > View > Locale aware sorting
 
+    FIXED: selecting a bigger number of files is very slow
     FIXED: [ 2969403 ] KrViewer shows old file content if file is overwritten, thanks to Kevin Kofler
     FIXED: [ 246424 (bugs.kde.org) ] krusader tries to load WHOLE big file into memory on F3
     FIXED: [ 2154760 ] Krusader erases files when opening for editing
